[Pluggable Engine] Fixes for end to end ingestion in DataFormatAwareEngine (#21460)
* Fixes in indexing path

Signed-off-by: Mohit Godwani <mgodwan@amazon.com>

* Test fixes

Signed-off-by: rayshrey <rayshrey@amazon.com>

---------

Signed-off-by: Mohit Godwani <mgodwan@amazon.com>
Signed-off-by: rayshrey <rayshrey@amazon.com>
Co-authored-by: Mohit Godwani <mgodwan@amazon.com>